Movie Booking/main/default/objects/Booking__c/validationRules/Booking_Name_greter_two.validationRule-meta.xml
<ValidationRule>
    <fullName>Booking_Name_greter_two</fullName>
    <active>true</active>
    <description>Booking name must be greater than two letters</description>
    <errorConditionFormula>LEN(Name) &lt; 2</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Booking Name must be greater than two letters</errorMessage>
</ValidationRule>